--- a/Registro_Evento/Registro_Evento/Views/Shared/_Layout.cshtml
+++ b/Registro_Evento/Registro_Evento/Views/Shared/_Layout.cshtml
@@ -140,7 +140,7 @@
                     <div class="col-md-6 text-md-end">
                         <p class="developed-by">
                             <i class="fas fa-code me-1"></i>
-                            Desarrollado con <i class="fas fa-heart text-danger"></i> en C# ASP.NET Core
+                            SNE
                         </p>
                     </div>
                 </div>
