--- a/Sivilab.Eventos/Components/Pages/Home.razor
+++ b/Sivilab.Eventos/Components/Pages/Home.razor
@@ -25,7 +25,7 @@
                         <div class="alert @(tipoMensaje == "success" ? "alert-success" : "alert-danger") alert-dismissible fade show" role="alert">
                             <i class="fas @(tipoMensaje == "success" ? "fa-check-circle" : "fa-exclamation-triangle") me-2"></i>
                             @mensaje
-                            <button type="button" class="btn-close" @onclick="CerrarAlerta"></button>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" @onclick="CerrarAlerta"></button>
                         </div>
                     }
 
