--- a/Sivilab.Web/Components/Layout/NavMenu.razor
+++ b/Sivilab.Web/Components/Layout/NavMenu.razor
@@ -35,6 +35,12 @@
                 <span class="oi oi-check" aria-hidden="true"></span> Validar Correo
             </NavLink>
         </div>
+       
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/candidatos">
+                <span class="oi oi-plus" aria-hidden="true"></span> Candidatos
+            </NavLink>
+        </div>
     </nav>
 </div>
 
